objects/Blue_Directions_LOB__c.object
<CustomObject>
    <description>This object stores the detailed information that a user needs to fill out for a Private Exchange - Blue Directions Case</description>
    <fields>
        <fullName>Blue_Directions_Plan_Year__c</fullName>
        <label>Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>IL-2017-Ext</fullName>
                    <label>IL 2017</label>
                </value>
                <value>
                    <fullName>IL-2017</fullName>
                </value>
                <value>
                    <fullName>IL-2018-Ext</fullName>
                    <label>IL 2018</label>
                </value>
                <value>
                    <fullName>IL-2018</fullName>
                </value>
                <value>
                    <fullName>MT-2017-Ext</fullName>
                    <label>MT 2017</label>
                </value>
                <value>
                    <fullName>MT-2017</fullName>
                </value>
                <value>
                    <fullName>MT-2018-Ext</fullName>
                    <label>MT 2018</label>
                </value>
                <value>
                    <fullName>MT-2018</fullName>
                </value>
                <value>
                    <fullName>NM-2017-Ext</fullName>
                    <label>NM 2017</label>
                </value>
                <value>
                    <fullName>NM-2017</fullName>
                </value>
                <value>
                    <fullName>NM-2018-Ext</fullName>
                    <label>NM 2018</label>
                </value>
                <value>
                    <fullName>NM-2018</fullName>
                </value>
                <value>
                    <fullName>OK-2017-Ext</fullName>
                    <label>OK 2017</label>
                </value>
                <value>
                    <fullName>OK-2017</fullName>
                </value>
                <value>
                    <fullName>OK-2018-Ext</fullName>
                    <label>OK 2018</label>
                </value>
                <value>
                    <fullName>OK-2018</fullName>
                </value>
                <value>
                    <fullName>TX-2017-Ext</fullName>
                    <label>TX 2017</label>
                </value>
                <value>
                    <fullName>TX-2017</fullName>
                </value>
                <value>
                    <fullName>TX-2018-Ext</fullName>
                    <label>TX 2018</label>
                </value>
                <value>
                    <fullName>TX-2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Parent Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Private_Exchange_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Blue_Directions_Line_of_Businesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dearborn_Basic_Multiple_Max__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Multiple of Salary Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Basic_Appl_Cov_Cond__c</fullName>
        <formula>&quot;*Applicable covered condition&quot; &amp; BR() &amp;
&quot;Invasive Cancer&quot; &amp; BR() &amp;
&quot;Heart Attack&quot; &amp; BR() &amp;
&quot;Stroke&quot; &amp; BR() &amp;
&quot;Major Organ Transplant&quot; &amp; BR() &amp;
&quot;Paralysis&quot; &amp; BR() &amp;
&quot;End Stage Renal Failure&quot; &amp; BR() &amp;
&quot;Benign Brain Tumor&quot; &amp; BR() &amp;
&quot;Coma&quot; &amp; BR() &amp;
&quot;Loss of Sight, Speech or Hearing&quot; &amp; BR() &amp;
&quot;Major Burns&quot; &amp; BR() &amp;
&quot;Carcinoma In Situ&quot; &amp; BR() &amp;
&quot;Heart Surgeries&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Covered Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Basic_Cov_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Basic_Cov_Reduc_Sch__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>None (only available if inforce)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Basic_Flat_Dollar__c</fullName>
        <inlineHelpText>(Up to 20K in 1K increments)</inlineHelpText>
        <label>Flat Dollar (In Thousands)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Basic_Info__c</fullName>
        <formula>&quot;Availability may vary by state. Please refer&quot; &amp; BR() &amp;
&quot;to certificate of coverage for full details.&quot; &amp; BR() &amp;
&quot;100% employer paid&quot; &amp; BR() &amp; &quot;100% participation required&quot; &amp; BR() &amp; &quot;Subject to 12/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol150_Cov_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol150_Cov_Reduc_Sch__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>None (only available if inforce)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol150_Inc_Choice_Increments__c</fullName>
        <inlineHelpText>In Thousands; From 5K up to 20K - 5K increments</inlineHelpText>
        <label>Increments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol150_Inc_Choice_Max__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol150_Inc_Choice_Min__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol150_Info__c</fullName>
        <formula>&quot;100% Employee paid&quot; &amp; BR() &amp; &quot;Subject to 12/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol151_Cov_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol151_Cov_Reduc_Sch__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>None (only available if inforce)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol151_Inc_Choice_Increments__c</fullName>
        <inlineHelpText>In Thousands; From 5K up to 20K - 5K increments</inlineHelpText>
        <label>Increments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol151_Inc_Choice_Max__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol151_Inc_Choice_Min__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_Vol151_Info__c</fullName>
        <formula>&quot;100% Employee paid&quot; &amp; BR() &amp; &quot;Subject to 12/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolChild_Inc_Choice_Incremen__c</fullName>
        <inlineHelpText>In Thousands
Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Increments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolChild_Inc_Choice_Max__c</fullName>
        <inlineHelpText>&quot;In Thousands
Maximum Benefit not to exceed 50% of Employee plan maximum&quot;</inlineHelpText>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolChild_Inc_Choice_Min__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolChild_Info__c</fullName>
        <formula>&quot;Subject to 12/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolSpouse_Inc_Choice_Increme__c</fullName>
        <inlineHelpText>In Thousands
Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Increments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolSpouse_Inc_Choice_Max__c</fullName>
        <inlineHelpText>In Thousands
Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolSpouse_Inc_Choice_Min__c</fullName>
        <inlineHelpText>In Thousands
Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolSpouse_Info__c</fullName>
        <formula>&quot;Subject to 12/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_CI_VolSpouse_Spouse_Coverage__c</fullName>
        <formula>&quot;Spouse reductions will equal employee reductions and are based on employee age.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Spouse Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_LT_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_LT_Emp_Info__c</fullName>
        <formula>&quot;Subject to 3/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Paid Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_LT_Vol_Info__c</fullName>
        <formula>&quot;Subject to 12/24 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Long_Benefit_Amount__c</fullName>
        <inlineHelpText>% of Monthly Covered Earnings
Options include Multiple of Salary</inlineHelpText>
        <label>Benefit Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>66 2/3%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Long_Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSNRA</fullName>
                </value>
                <value>
                    <fullName>2 year</fullName>
                </value>
                <value>
                    <fullName>5 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Long_Elimination__c</fullName>
        <inlineHelpText>(In Days)</inlineHelpText>
        <label>Elimination Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>180 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Long_Term_Type__c</fullName>
        <label>Disability Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Paid</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Gross Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Monthly_Maximum__c</fullName>
        <inlineHelpText>from $4k to $10k in $500 increments. 
In Thousands</inlineHelpText>
        <label>Monthly Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_ST_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_ST_Vol_Info__c</fullName>
        <formula>&quot;Subject to 12/12 Pre-Ex&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Short_Benefit_Amount__c</fullName>
        <inlineHelpText>% of Weekly Covered Earnings
Options include Multiple of Salary</inlineHelpText>
        <label>Benefit Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>66 2/3%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Short_Duration__c</fullName>
        <inlineHelpText>Or until LTD begins, whichever is earlier</inlineHelpText>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>13 Weeks</fullName>
                </value>
                <value>
                    <fullName>26 Weeks</fullName>
                </value>
                <value>
                    <fullName>52 Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Short_Elimination__c</fullName>
        <inlineHelpText>(in Days)</inlineHelpText>
        <label>Elimination Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7 Sickness / 0 Accident</fullName>
                </value>
                <value>
                    <fullName>7 Sickness / 7 Accident</fullName>
                </value>
                <value>
                    <fullName>14 Sickness / 14 Accident</fullName>
                </value>
                <value>
                    <fullName>30 Sickness / 30 Accident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Short_Term_Type__c</fullName>
        <label>Disability Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Paid</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Gross Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Disability_Short_Week_Max__c</fullName>
        <inlineHelpText>From $50 to $1500 in $50 increments.</inlineHelpText>
        <label>Weekly Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_ADD_Benefits__c</fullName>
        <formula>&quot;Matches Life Insurance Amount (For Both Basic and Voluntary Coverage)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AD&amp;D Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_ADD_Cov_Info__c</fullName>
        <formula>&quot;• Seat Belt Benefit&quot; &amp; BR() &amp; &quot;• Air Bag Benefit&quot; &amp; BR() &amp; &quot;• Repatriation Benefit&quot; &amp; BR() &amp; &quot;• Education Benefit&quot; &amp; BR() &amp; &quot;*Availability may vary by state. Please refer to certificate of coverage for full details.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AD&amp;D Coverage Includes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_ADD_Features__c</fullName>
        <formula>&quot;AD&amp;D reductions match corresponding Life reductions&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AD&amp;D Features</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Basic_Choice__c</fullName>
        <label>Benefit Amount</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Dollar</fullName>
                </value>
                <value>
                    <fullName>Multiple of Salary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Basic_Comments__c</fullName>
        <inlineHelpText>If multiple plans by class, please indicate in Comments</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Basic_Info__c</fullName>
        <formula>&quot;100% employer paid&quot; &amp; BR() &amp; &quot;100% participation required&quot; &amp; BR() &amp; &quot;All Basic Life amounts Guarantee Issue&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basic Life Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Coverage_Includes__c</fullName>
        <formula>&quot;• Waiver of Premium&quot; &amp; BR() &amp; &quot;• Accelerated Death Benefit&quot; &amp; BR() &amp; &quot;• Portability (on Voluntary Only)&quot; &amp; BR() &amp; &quot;• Conversion&quot; &amp; BR() &amp; &quot;• Beneficiary Resource Services&quot; &amp; BR() &amp; &quot;• Travel Resource Services&quot; &amp; BR() &amp; &quot;• Availability may vary by state. Please refer to certificate of coverage for full details.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Coverage Includes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Flat_Cov_Reduce__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Flat Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>35% at 65, 50% at 70, 75% at 75, 85% at 80</fullName>
                </value>
                <value>
                    <fullName>50% at 70</fullName>
                </value>
                <value>
                    <fullName>None (only available if inforce)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Flat_Dollar__c</fullName>
        <inlineHelpText>(From 10K up to 150K in 5K increments )</inlineHelpText>
        <label>Flat Dollar (In Thousands)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Multiple_Cov_Reduce__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Multiple Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>35% at 65, 50% at 70, 75% at 75, 85% at 80</fullName>
                </value>
                <value>
                    <fullName>50% at 70</fullName>
                </value>
                <value>
                    <fullName>None (only available if inforce)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Multiple_of_Salary__c</fullName>
        <inlineHelpText>(From .5X to 3X in .5X increments)
Maximum Benefit up to $500K</inlineHelpText>
        <label>Multiple of Salary</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Retiree_Cov__c</fullName>
        <inlineHelpText>Please note that Retiree Coverage will not be enrolled on the exchange, please provide retiree census and plan design information in order for Dearborn National to prepare a quote for retiree coverage.</inlineHelpText>
        <label>Retiree Life Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Child_Increments__c</fullName>
        <label>Increments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Child_Info__c</fullName>
        <formula>&quot;Includes Life &amp; AD&amp;D&quot; &amp; BR() &amp; BR() &amp; &quot;All amounts Guarantee Issue&quot; &amp; BR() &amp; BR() &amp; &quot;Only available with Voluntary Employee Coverage&quot; &amp; BR() &amp; BR() &amp; &quot;Standard Coverage is $2K-$10K in $2K Increments&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Child Coverage Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Child_Max__c</fullName>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Child_Min__c</fullName>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Choice__c</fullName>
        <label>Benefit Amount</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental Choice</fullName>
                </value>
                <value>
                    <fullName>Multiple of Salary Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Comments__c</fullName>
        <inlineHelpText>If you chose Custom Coverage Reduction Schedule, please fill in Comments. If you choose Coverage Reduction Schedule of Other, please fill in Comments.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Inc_Cov_Reduce__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Incremental Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>35% at 65, 50% at 70, 75% at 75, 85% at 80</fullName>
                </value>
                <value>
                    <fullName>50% at 70</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Increments__c</fullName>
        <inlineHelpText>In Thousands
Combined Maximum Benefit of $500K</inlineHelpText>
        <label>Increments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Info__c</fullName>
        <formula>&quot;Combined Basic &amp; Voluntary Coverage Amount cannot exceed $500K&quot; &amp; BR() &amp; BR() &amp; &quot;Guarantee issue determined at time of proposal&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Employee Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Max__c</fullName>
        <inlineHelpText>In Thousands
Combined Maximum Benefit of $500K</inlineHelpText>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Min__c</fullName>
        <inlineHelpText>In Thousands
Combined Maximum Benefit of $500K</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Multiple_Cov_Reduc__c</fullName>
        <inlineHelpText>(reduced by % of original amount)</inlineHelpText>
        <label>Multiple Coverage Reduction Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>35% at 65, 50% at 70 (Standard)</fullName>
                </value>
                <value>
                    <fullName>35% at 65, 50% at 70, 75% at 75, 85% at 80</fullName>
                </value>
                <value>
                    <fullName>50% at 70</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Emp_Multiple_of_Salary__c</fullName>
        <inlineHelpText>Max Salary multiplier 5X Combined Maximum Benefit of $500K</inlineHelpText>
        <label>Multiple of Salary Choice</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Choice__c</fullName>
        <label>Benefit Amount</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incremental Choice</fullName>
                </value>
                <value>
                    <fullName>Multiple of EE Salary Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Cov_Reduce__c</fullName>
        <formula>&quot;Spouse reductions will equal employee reductions and are based on employee age.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Reduction Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Increments__c</fullName>
        <inlineHelpText>Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Increments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Info__c</fullName>
        <formula>&quot;Includes Life &amp; AD&amp;D&quot; &amp; BR() &amp; BR() &amp; &quot;Guarantee issue determined at time of proposal&quot; &amp; BR() &amp; BR() &amp; &quot;Spouse Coverage Amount cannot exceed 50% of Employee Elected Amount&quot; &amp; BR() &amp; BR() &amp; &quot;Only available with Voluntary Employee Coverage&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Spouse Coverage Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Max__c</fullName>
        <inlineHelpText>Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Incremental Choice Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Min__c</fullName>
        <inlineHelpText>Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Life_Vol_Spouse_Multiple_of_EE__c</fullName>
        <inlineHelpText>Salary multiplier not to exceed Half Employee plan Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Multiple of EE Salary Choice</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>